--- a/Documents/Referencias.tex
+++ b/Documents/Referencias.tex
@@ -5,7 +5,7 @@
 
 \title{Referencias para el proyecto AERO}
 
-\author{Filippo Visco-Comandini, Franco Piergallini}% <-this % stops a space
+\author{Filippo Visco-Comandini, Franco Piergallini Guida}% <-this % stops a space
 
 
 
@@ -16,7 +16,7 @@
 The abstract goes here.
 \end{abstract}
 \section{Introduccion}
- \cite{nahmias2004models}
+\cite{nahmias2004models}
 
 \section{Notas bibliografica}
 
@@ -33,7 +33,7 @@ The abstract goes here.
 %\end{thebibliography}
 
 \bibliographystyle{IEEEtran}
-\bibliography{BibliografiaFilippo}
+\bibliography{BibliografiaAERO}
 
 \end{document}
 
