--- a/Working/Franco/Cleaner/generic_cleaner.ipynb
+++ b/Working/Franco/Cleaner/generic_cleaner.ipynb
@@ -14,13 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#raw_data = pd.read_csv(\"../../../Data/GRUPO DRAGON 2018/ech2/data/000960_Vaquerias_Jalisco_meas_2017.09.04-2017.10.03.txt\", encoding = \"utf8\")\n",
     "#raw_data = pd.read_csv(\"../../../Data/GRUPO DRAGON 2018/ech1 18092018/ech1 18092018.txt\", encoding = \"utf8\")\n",
-    "#raw_data = pd.read_csv(\"../../../Data/GRUPO DRAGON 2018/ech2/data/001082__meas_2017.10.03-2018.01.23.txt\", encoding = \"utf8\")"
+    "#raw_data = pd.read_csv(\"../../../Data/GRUPO DRAGON 2018/ech2/data/001082__meas_2017.10.03-2018.01.23.txt\", encoding = \"utf8\")\n",
+    "\n",
+    "raw_data = pd.read_csv(\"C:/Users/Franco/Documents/AnacondaProjects/Github/AERO/Data/Datos a limpiar/000960_Vaquerias,_Jalisco_meas_2017.09.04-2017.10.03.txt\", encoding = \"utf8\")"
    ]
   },
   {
