--- a/Documents/BibliografiaAERO.bib
+++ b/Documents/BibliografiaAERO.bib
@@ -1,22 +1,88 @@
-@book{nahmias2004models,
-  title={Models, numbers, and cases: methods for studying international relations},
-  author={Nahmias-Wolinsky, Yael},
-  year={2004},
-  publisher={University of Michigan Press}
+
+
+@inproceedings{lu2009review,
+  title={A review of recent advances in wind turbine condition monitoring and fault diagnosis},
+  author={Lu, Bin and Li, Yaoyu and Wu, Xin and Yang, Zhongzhou},
+  booktitle={2009 IEEE Power Electronics and Machines in Wind Applications},
+  pages={1--7},
+  year={2009},
+  organization={IEEE}
 }
 
-@misc{voeks1970self,
-  title={Self-propelled driving and steering truck for shopping carts},
-  author={Voeks, Elton L and Barnowsky, Arwed J},
-  year={1970},
-  month=aug # "~18",
-  publisher={Google Patents},
-  note={US Patent 3,524,512}
+@techreport{kim2011use,
+  title={Use of SCADA data for failure detection in wind turbines},
+  author={Kim, Kyusung and Parthasarathy, Girija and Uluyol, Onder and Foslien, Wendy and Sheng, Shuangwen and Fleming, Paul},
+  year={2011},
+  institution={National Renewable Energy Lab.(NREL), Golden, CO (United States)}
 }
 
-@misc{OMS2018,
-  title={Informe de aoguern},
-  author={autor1, autor2},
-  year={2018},
-  publisher={OMS publisher}
+@article{kusiak2011prediction,
+  title={The prediction and diagnosis of wind turbine faults},
+  author={Kusiak, Andrew and Li, Wenyan},
+  journal={Renewable Energy},
+  volume={36},
+  number={1},
+  pages={16--23},
+  year={2011},
+  publisher={Elsevier}
+}
+@inproceedings{schlechtingen2012condition,
+  title={Condition monitoring with ordinary wind turbine SCADA data--A neuro-fuzzy approach},
+  author={Schlechtingen, Meik and Santos, Ilmar},
+  booktitle={Offshore 2011},
+  year={2012}
+}
+
+@article{schlechtingen2011comparative,
+  title={Comparative analysis of neural network and regression based condition monitoring approaches for wind turbine fault detection},
+  author={Schlechtingen, Meik and Santos, Ilmar Ferreira},
+  journal={Mechanical systems and signal processing},
+  volume={25},
+  number={5},
+  pages={1849--1875},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{tchakoua2014wind,
+  title={Wind turbine condition monitoring: State-of-the-art review, new trends, and future challenges},
+  author={Tchakoua, Pierre and Wamkeue, Ren{\'e} and Ouhrouche, Mohand and Slaoui-Hasnaoui, Fouad and Tameghe, Tommy and Ekemb, Gabriel},
+  journal={Energies},
+  volume={7},
+  number={4},
+  pages={2595--2630},
+  year={2014},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{yang2014wind,
+  title={Wind turbine condition monitoring: technical and commercial challenges},
+  author={Yang, Wenxian and Tavner, Peter J and Crabtree, Christopher J and Feng, Y and Qiu, Y},
+  journal={Wind Energy},
+  volume={17},
+  number={5},
+  pages={673--693},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{wang2014scada,
+  title={SCADA data based condition monitoring of wind turbines},
+  author={Wang, Ke-Sheng and Sharma, Vishal S and Zhang, Zhen-You},
+  journal={Advances in Manufacturing},
+  volume={2},
+  number={1},
+  pages={61--69},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{wymore2015survey,
+  title={A survey of health monitoring systems for wind turbines},
+  author={Wymore, Mathew L and Van Dam, Jeremy E and Ceylan, Halil and Qiao, Daji},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={52},
+  pages={976--990},
+  year={2015},
+  publisher={Elsevier}
 }
