--- a/Documents/AEROFaltDetection.tex
+++ b/Documents/AEROFaltDetection.tex
@@ -17,13 +17,12 @@
 \begin{abstract}
 The abstract goes here.
 \end{abstract}
-\section{Introducion}
-asdadasd
-
-
-\section{Notas bibliografica}
-dasadadasda
-\cite{wang2014scada}
+\section{Introduction}
+Renewable energy source is playing an important role in the global energy mix, as a mean of reducing the impact of energy production on climate change. \\
+Supervisory control and data acquisition (SCADA) is an application that collects data from a system and sends them to a central computer for monitoring and controlling. Current CM systems essentially provide the necessary sensor and capability of data capture required for monitoring
+A wind turbine (WT) is a machine used for converting the kinetic energy in wind into mechanical energy. 
+\subsection{Notas bibliografica}
+Diagnosis and prognosis of the wind turbine based upon SCAD data using a AI based framework \cite{wang2014scada}.
 
 \cite{kusiak2011prediction}
 
@@ -34,14 +33,24 @@ dasadadasda
 \cite{schlechtingen2011comparative}
 
 \cite{yang2014wind}
-
-\cite{tchakoua2014wind}
+Survey of the wind turbine condition monitoring done in 2014 \cite{tchakoua2014wind}.
 
 
 \cite{wymore2015survey}
 
+Exploration of exisisting wind turbine SCADA data fro development of fault detections and diagnostic technicaques for wind turbine using clustering algorithms and principal components analysis \cite{kim2011use}.
 
-\cite{kim2011use}
+\section{Failure in the sensor towers}
+
+\section{Sensor tower diagnostics with scada data}
+
+\section{Algorithms}
+\section{Ratio}
+\section{Pearson correlations}
+\section{Results and discussion}
+\section{Conclusion}
+XXXXX
+
 \bibliographystyle{IEEEtran}
 \bibliography{BibliografiaAERO.bib}
 
