adding more sections to the paper

--- a/Documents/AEROFaltDetection.tex
+++ b/Documents/AEROFaltDetection.tex
@@ -40,7 +40,13 @@ Survey of the wind turbine condition monitoring done in 2014 \cite{tchakoua2014w
 
 Exploration of exisisting wind turbine SCADA data fro development of fault detections and diagnostic technicaques for wind turbine using clustering algorithms and principal components analysis \cite{kim2011use}.
 
+\section{scada data}
 \section{Failure in the sensor towers}
+In this section, we are going to describe different existing types of failures in sensor towers. We can classify them in three group
+\subsection{Mechanical faults} Mechanicals faults are identify by a mechanical failure in the sensor. For example in the \emph{XXX veleta}, 
+in the anemometers .there is a large variety of mechanical faults
+\subsection{Connection  faults} Intermittant faults
+\subsection{Calibration faults} Faults that changes the measurement all along the scales
 
 \section{Sensor tower diagnostics with scada data}
 
