added some bibliography and first draft for the Mexico paper

--- a/Documents/AEROFaltDetection.tex
+++ b/Documents/AEROFaltDetection.tex
@@ -22,7 +22,12 @@ Renewable energy source is playing an important role in the global energy mix, a
 Supervisory control and data acquisition (SCADA) is an application that collects data from a system and sends them to a central computer for monitoring and controlling. Current CM systems essentially provide the necessary sensor and capability of data capture required for monitoring
 A wind turbine (WT) is a machine used for converting the kinetic energy in wind into mechanical energy. 
 \subsection{Notas bibliografica}
-Diagnosis and prognosis of the wind turbine based upon SCAD data using a AI based framework \cite{wang2014scada}.
+Diagnosis and prognosis of the wind turbine based upon SCADA data using a AI based framework \cite{wang2014scada}.
+
+Fault diagnosis techiques for meteorogial masts \cite{hasu2006weather}  .
+
+Mathematical methods for SCADA data mining of onshore wind farms: Performance evaluation and wakeanalysis \cite{astolfi2016mathematical}.
+
 
 \cite{kusiak2011prediction}
 
