Added the draft for the article

--- a/Documents/BibliografiaAERO.bib
+++ b/Documents/BibliografiaAERO.bib
@@ -105,3 +105,10 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@phdthesis{ribrant2006thesis, 
+title={Reliability Performance and Maintenance?A Survey of Failures in Wind Power Systems},
+author={Ribrant, J},
+school = {School of Electrical Engineeringm, KTH Royal Institute of Technology},
+year = {2006}
+}
