--- a/Working/Franco/Analysis/sensor_analysis_functions.ipynb
+++ b/Working/Franco/Analysis/sensor_analysis_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
     "\n",
     "import plotly.offline as pyo\n",
     "import plotly_express as px\n",
-    "\n",
+    "import plotly.graph_objs as go\n",
     "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        sensor: 'anem' anemometer, 'vane' windvane\n",
     "        func: 'correlation', 'ratio', 'diff', 'all'\n",
     "        correlation_window: default=10. Ventana de correlación\n",
-    "        \n",
+    "\n",
     "        return: Dataframe con las stats nuevas\n",
     "    \"\"\"\n",
     "    if sensor.lower() == 'anem':\n",
@@ -87,8 +87,16 @@
     "        # Rolling correlations           \n",
     "        if ('correlation' in func) or ('all' in func):\n",
     "            correlation_col_name = str(x[0] + 'VS' + x[1] + '_correlation*')\n",
-    "            rolling_correlation = df_sensors[x[0]].rolling(correlation_window).corr(df_sensors[x[1]].rolling(correlation_window))\n",
-    "            df_sensors[correlation_col_name] = rolling_correlation.values\n",
+    "            \n",
+    "            #rolling_correlation = df_sensors[x[0]].rolling(correlation_window).corr(df_sensors[x[1]].rolling(correlation_window)).shift(2)\n",
+    "            rolling_correlation = [np.corrcoef(df_sensors.loc[idx-correlation_window:idx, x[0]].values, df_sensors.loc[idx-correlation_window:idx, x[1]].values)[0][1] for idx, _ in df_sensors.iterrows()]\n",
+    "            \n",
+    "            \n",
+    "            df_sensors[correlation_col_name] = rolling_correlation\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
     "            df_sensors[correlation_col_name + '_anomaly'] = ''\n",
     "            df_sensors.loc[df_sensors[correlation_col_name] <= correlation_th, correlation_col_name + '_anomaly'] = 1\n",
     "            df_sensors.loc[df_sensors[correlation_col_name] > correlation_th, correlation_col_name + '_anomaly'] = 0\n",
@@ -226,21 +234,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_sensors(df, index_start, sensors=[]):\n",
+    "def plot_sensors(df, index_start, index_finish, sensors=[]):\n",
     "\n",
     "    time_col = df.columns[df.columns.str.contains('Time')]\n",
     "    \n",
-    "    df_to_plot = df.loc[index_start - 50:index_start+50, sensors]\n",
-    "    df_to_plot['step'] = df.loc[index_start - 50:index_start+50, time_col]\n",
+    "    df_to_plot = df.loc[index_start - 20:index_finish+50, sensors]\n",
+    "    df_to_plot['step'] = df.loc[index_start - 20:index_finish+50, time_col]\n",
     "    \n",
-    "    df_melt = df_to_plot.melt(id_vars='step', value_vars=sensors)\n",
+    "    #df_melt = df_to_plot.melt(id_vars='step', value_vars=sensors)\n",
     "    \n",
-    "    fig = px.line(df_melt, x='step', y='value', color='variable')\n",
+    "    #fig = px.line(df_melt, x='step', y='value', color='variable', title='Start: '+ str(df_to_plot.loc[index_start, 'step']) +' Ends: '+ str(df_to_plot.loc[index_finish, 'step']))\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(x=df_to_plot['step'], y=df_to_plot[sensors[0]],\n",
+    "                        mode='lines+markers',\n",
+    "                        name=str(sensors[0])))\n",
+    "\n",
+    "    fig.add_trace(go.Scatter(x=df_to_plot['step'], y=df_to_plot[sensors[1]],\n",
+    "                        mode='lines+markers',\n",
+    "                        name=str(sensors[1])))\n",
+    "\n",
+    "    fig.layout.update(\n",
+    "        title=go.layout.Title(\n",
+    "            text='Start: '+ str(df_to_plot.loc[index_start, 'step']) +' Ends: '+ str(df_to_plot.loc[index_finish, 'step']),\n",
+    "    ))\n",
     "    \n",
+    "    #fig.show(=)    \n",
     "    return fig"
    ]
   },
@@ -310,12 +332,13 @@
     "            os.makedirs(f'anomaly_html/{dir_name}/{key}')\n",
     "        except:\n",
     "            print(\"Already exists...\")\n",
+    "            \n",
     "        for value in values:\n",
-    "            fig = plot_sensors(df, value[0], sensors=[key, redundance_dict[key]])\n",
+    "            fig = plot_sensors(df, value[0], value[-1], sensors=[key, redundance_dict[key]])\n",
     "            fig.write_html(f'anomaly_html/{dir_name}/{key}/{key}-{value[0]}.html', full_html=False)   \n",
     "    \n",
     "        cont = 0\n",
-    "        for file in tqdm(glob.glob(f\"anomaly_html/{dir_name}/{key}/*.html\")):\n",
+    "        for file in tqdm(sorted(glob.glob(f\"anomaly_html/{dir_name}/{key}/*.html\"), key=os.path.getmtime)):\n",
     "            html += '<div><h3> Anomalia: '+ str(cont+1) +' en el sensor: '+ key +'</h3></div>'\n",
     "            cont +=1\n",
     "            f = open(file, 'r', encoding='utf-8')\n",
@@ -331,21 +354,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#html = '<html><body>' #add anything else in here or even better \n",
-    "                      #use a template that you read and complement\n",
-    "#lastDate = None\n",
-    "#for r in htmlfiles:\n",
-    "#    print(r)\n",
-    "    #if not lastDate or not lastDate == r[1]:\n",
-    "        #html += '<h3>%s</h3>' % (str(r[1]))\n",
-    "    #html += '<a href=\"%s\">Your Report Title</a>' % (r[0])\n",
-    "\n",
-    "#return html #or even better, write it to the disk."
+    "def anem_parameter_tunning(df, ch_anem, ratio_range=30, correlation_range=10):\n",
+    "    \n",
+    "    df_to_tunning = df[df.columns[df.columns.str.contains('Anem')]].copy()\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    idx = 0\n",
+    "    \n",
+    "    for ratio in tqdm(range(2, ratio_range)):\n",
+    "        for correlation in range(1, correlation_range):\n",
+    "            correlation = round(correlation *.1, 2)\n",
+    "            \n",
+    "            df_fault_detection = fault_detection(df_to_tunning, sensor='anem', correlation_window=10, ratio_th=ratio, correlation_th=correlation)\n",
+    "            \n",
+    "            df_anem_filtered = anemometer_identification(df_vaquerias_fault_detection)\n",
+    "            \n",
+    "            indexes = get_index_list(df_anem_filtered, ch_anem)\n",
+    "            \n",
+    "            anem_dict = {}\n",
+    "            #anem_dict[ch_anem] = split_kneighbor_indexes(indexes, 12)\n",
+    "            print(len(split_kneighbor_indexes(indexes, 12)))           "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def anem_parameter_tunning(df, ratio_range=30, correlation_range=10):\n",
+    "    \n",
+    "    df_to_plot = df[df.columns[df.columns.str.contains('Anem')]]\n",
+    "    \n",
+    "    df_intersection = pd.DataFrame()\n",
+    "    df_ratio = pd.DataFrame()\n",
+    "    df_correlation = pd.DataFrame()\n",
+    "    \n",
+    "    \n",
+    "    idx = 0\n",
+    "    for ratio in tqdm(range(2, ratio_range)):\n",
+    "        for correlation in range(0, correlation_range):\n",
+    "            correlation = round(correlation *.1, 2)\n",
+    "            df_to_plot_stats = fault_detection(df_to_plot, sensor='anem', correlation_window=10, ratio_th = ratio, correlation_th = correlation)\n",
+    "        \n",
+    "            ratio_cols = df_to_plot_stats.columns[df_to_plot_stats.columns.str.contains('_ratio\\*_anomaly')]\n",
+    "            correlation_cols = df_to_plot_stats.columns[df_to_plot_stats.columns.str.contains('_correlation\\*_anomaly')]\n",
+    "            \n",
+    "            \n",
+    "            count_intersection = []\n",
+    "            for x in range(len(ratio_cols)):\n",
+    "                count_intersection.append(len(df_to_plot_stats.loc[(df_to_plot_stats[ratio_cols[x]] == 1) & \n",
+    "                                                                   (df_to_plot_stats[correlation_cols[x]] == 1), :]))\n",
+    "    \n",
+    "            count_intersection = sum(count_intersection)         \n",
+    "            df_intersection.loc[idx, 'cant'] = count_intersection\n",
+    "            df_intersection.loc[idx, 'ratio'] = ratio\n",
+    "            df_intersection.loc[idx, 'correlation'] = correlation\n",
+    "            df_intersection.name = 'Intersection'\n",
+    "        \n",
+    "            count_ratio = []\n",
+    "            count_ratio.append([len(df_to_plot_stats.loc[df_to_plot_stats[col] == 1, col]) for col in ratio_cols])\n",
+    "            count_ratio = sum(*count_ratio)\n",
+    "            df_ratio.loc[idx, 'cant'] = count_ratio\n",
+    "            df_ratio.loc[idx, 'ratio'] = ratio\n",
+    "            df_ratio.loc[idx, 'correlation'] = correlation\n",
+    "            df_ratio.name = 'Ratio'\n",
+    "            \n",
+    "            count_correlation = []\n",
+    "            count_correlation.append([len(df_to_plot_stats.loc[df_to_plot_stats[col] == 1, col]) for col in correlation_cols])\n",
+    "            count_correlation = sum(*count_correlation)\n",
+    "            df_correlation.loc[idx, 'cant'] = count_correlation\n",
+    "            df_correlation.loc[idx, 'ratio'] = ratio\n",
+    "            df_correlation.loc[idx, 'correlation'] = correlation\n",
+    "            df_correlation.name = 'Correlation'\n",
+    "            \n",
+    "            idx = idx+1\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
